AT-22-bug-fix white space formating

--- a/client/src/pages/register/component/register.component.scss
+++ b/client/src/pages/register/component/register.component.scss
@@ -131,8 +131,7 @@
                                 background-color: palette.$main-blue-lighter-color;
                                 transition:
                                     color 150ms ease-in-out,
-                                    background-color 150ms ease-in-out,
-                                ;
+                                    background-color 150ms ease-in-out;
                             }
                         }
                     }
